...
                                <color key="backgroundColor" red="0.4039215686" green="0.2274509804" blue="0.71764705880000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="9gU-lJ-NJx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="37"/>
                                <color key="tintColor" white="1" alpha="0.87" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Red"/>
                                <connections>
                                    <action selector="selectWineType:" destination="0F1-Cv-DyL" eventType="touchUpInside" id="RUy-I3-bSm"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z6g-m6-cAg" customClass="ButtonPrimaryGradient" customModule="mowine">
                                <rect key="frame" x="16" y="237" width="343" height="80"/>
...
                                    <action selector="selectWineType:" destination="0F1-Cv-DyL" eventType="touchUpInside" id="oWm-5K-d1P"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRI-0b-qtZ">
                                <rect key="frame" x="140.5" y="613" width="94" height="38"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Take Later">
                                    <color key="titleColor" red="0.70196078429999997" green="0.61568627450000002" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="VEu-kc-eUB" kind="show" identifier="NameWine" id="da1-QC-BUO"/>
                                </connections>
                            </button>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BcE-1d-zAB">
                                                <rect key="frame" x="24" y="62.5" width="327" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="wineName"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="FUu-l8-Kr2"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0rM-JR-l5W" customClass="ButtonPrimaryGradient" customModule="mowine" customModuleProvider="target">
                                                <rect key="frame" x="16" y="223" width="343" height="80"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="80" id="7RR-ld-22w"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                <state key="normal" title="Add Wine"/>
                                                <connections>
                                                    <action selector="tappedNext:" destination="VEu-kc-eUB" eventType="touchUpInside" id="yPn-GM-e51"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
