...

public class MemoryWineTypeRepository: WineTypeRepository {
    public private(set) lazy var types: [WineType] = {
        let red = WineType(name: "Red", varieties: [
            WineVariety(name: "Cabernet Sauvignon"),
            WineVariety(name: "Chianti"),
            WineVariety(name: "Malbec"),
            WineVariety(name: "Merlot"),
            WineVariety(name: "Pinot Nior"),
            WineVariety(name: "Red Blend")
        ])
        
        let white = WineType(name: "White", varieties: [
...
